links and clean up

--- a/assets/hera_documentation.qmd
+++ b/assets/hera_documentation.qmd
@@ -22,7 +22,7 @@ format:
 
 ## Hera
 
-Hera is one of NOAA's high performance computing resources available to NMFS scientists where jobs are run and scheduled with [SLURM](https://docs.rdhpcs.noaa.gov/slurm/overview.html#). In order to access the system, you must first have a [RDHPCS user account](https://docs.rdhpcs.noaa.gov/accounts/index.html) and request access to a project. For all of the examples in this documentation, we will be working in the `htc4sa` project. For complete documentation about Hera and other RDHPCS resources, see the NOAA RDHPCS [website](https://docs.rdhpcs.noaa.gov/index.html).
+Hera is one of NOAA's high performance computing resources available to NMFS scientists where jobs are run and scheduled with [SLURM](https://docs.rdhpcs.noaa.gov/slurm/overview.html#){target="_blank"}. In order to access the system, you must first have a [RDHPCS user account](https://docs.rdhpcs.noaa.gov/accounts/index.html){target="_blank"} and request access to a project. For all of the examples in this documentation, we will be working in the `htc4sa` project. For complete documentation about Hera and other RDHPCS resources, see the NOAA RDHPCS [website](https://docs.rdhpcs.noaa.gov/index.html){target="_blank"}.
 
 ::: {.callout-important}
 ### Coding alert!
@@ -46,7 +46,7 @@ ssh -m hmac-sha2-256-etm@openssh.com User.Name@hera-rsa.bastion.rdhpcs.noaa.gov 
 ```
 
 Note that the flag `-p22` specifies opening port 22 and is optional. 
-When prompted, put in your password followed by the [RSA authentication code](https://docs.rdhpcs.noaa.gov/accounts/rsa_token.html): 
+When prompted, put in your password followed by the [RSA authentication code](https://docs.rdhpcs.noaa.gov/accounts/rsa_token.html){target="_blank"}: 
 ```{bash}
 XXXXXXXXRSACODE
 ```
@@ -78,7 +78,7 @@ Where `XXXXX` and `YYYYY` are your 4-5 digit port forwarding numbers. Make note 
 
 ### via scp using data transfer node (DTN)
 
-Information in this section is largely based on [this wiki](https://docs.rdhpcs.noaa.gov/data/index.html) (CAC login required). File transfer using a DTN is only possible from machines within the noaa.gov domain (VPN ok), and can only transfer files to the *scratch* directory. However, this is ok since it is recommended that input/output data files are stored in the *scratch* directory. Using a DTN is faster than using the [ssh tunnel](#transferring-files-tofrom-hera-via-scp-using-an-ssh-tunnel).
+Information in this section is largely based on [this wiki](https://docs.rdhpcs.noaa.gov/data/index.html){target="_blank"}. File transfer using a DTN is only possible from machines within the noaa.gov domain (VPN ok), and can only transfer files to the *scratch* directory. However, this is ok since it is recommended that input/output data files are stored in the *scratch* directory. Using a DTN is faster than using the [ssh tunnel](#via-scp-using-an-ssh-tunnel). 
 
 ::: {.callout-note}
 # Note
@@ -100,7 +100,7 @@ If trying to transfer from a machine not within the NOAA domain (or on the VPN) 
 ```{bash}
 scp /path/to/local/file User.Name@udtn-hera.fairmont.rdhpcs.noaa.gov:/scratch1/data_untrusted/User.Name/
 ```
-Note that `dtn-hera` was changed to `udtn-hera`. Since files cannot stay in the `data_untrusted` directory we will need to [log in to Hera](#connecting-to-hera-via-ssh) and move it to the correct project directory on scratch. Once logged in, moving the files can be done with [*rsync*](https://docs.rdhpcs.noaa.gov/data/local_migration.html) (CAC login required), and then they can be deleted from `data_untrusted` by:
+Note that `dtn-hera` was changed to `udtn-hera`. Since files cannot stay in the `data_untrusted` directory we will need to [log in to Hera](#connecting-to-hera-via-ssh) and move it to the correct project directory on scratch. Once logged in, moving the files can be done with [*rsync*](https://docs.rdhpcs.noaa.gov/data/local_migration.html){target="_blank"}, and then they can be deleted from `data_untrusted` by:
 ```{bash}
 rsync -axv /scratch1/data_untrusted/User.Name/file /scratch1/NMFS/project_name/User.Name/
 rm /scratch1/data_untrusted/User.Name/file
@@ -113,7 +113,7 @@ scp User.Name@dtn-hera.fairmont.rdhpcs.noaa.gov:/scratch1/NMFS/project_name/User
 
 ### via scp using an ssh tunnel
 
-Information in this section is largely based on [this wiki](https://docs.rdhpcs.noaa.gov/data/transferring_data.html) (CAC login required). File transfer using an ssh tunnel is possible from all locations. Using the ssh tunnel for file transfer requires a two-step process with two active terminal windows (we suggest using PowerShell):
+Information in this section is largely based on [this wiki](https://docs.rdhpcs.noaa.gov/data/transferring_data.html){target="_blank"}. File transfer using an ssh tunnel is possible from all locations. Using the ssh tunnel for file transfer requires a two-step process with two active terminal windows (we suggest using PowerShell):
 
 1. In the first terminal window, open an ssh connection to Hera with port forwarding:
 ```{bash}
