--- a/assets/presentation.qmd
+++ b/assets/presentation.qmd
@@ -173,7 +173,7 @@ Used HTC resources to complete [~4 months]{.fragment .hl-cur-blue fragment-index
 
 ::: {.fragment .fade-in fragment-index=9}
 ::: {.absolute left="0%" top="35%" right=60% style="font-size:0.6em; padding: 0.5em 1em; background-color: rgba(255, 255, 255, 1); backdrop-filter: blur(5px); box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .5); border-radius: 5px;"}
-**Example**: [Fitting large spatiotemporal model in R](https://arxiv.org/abs/2304.09442){preview-link="true"} using TMB required [128 CPUs & 1TB RAM]{.blue}.
+**Example**: [Fitting large spatiotemporal model in R](https://arxiv.org/abs/2304.09442) using TMB required [128 CPUs & 1TB RAM]{.blue}.
 :::
 :::
 
@@ -253,35 +253,35 @@ Used HTC resources to complete [~4 months]{.fragment .hl-cur-blue fragment-index
 ::: {.column width="45%"}
 [NOAA Hera]{.blue}
 
-::: {.fragment .semi-fade-out fragment-index=12}
-::: {.fragment .fade-in fragment-index=6}
-- Uses [Slurm](https://slurm.schedmd.com/documentation.html){preview-link="true"} to schedule HPC [(or HTC)]{.fragment .hl-blue fragment-index=7} workflows
+::: {.fragment .semi-fade-out fragment-index=11}
+::: {.fragment .fade-in fragment-index=5}
+- Uses [Slurm](https://slurm.schedmd.com/documentation.html){preview-link="true"} to schedule HPC [(or HTC)]{.fragment .hl-blue fragment-index=6} workflows
 :::
 
 
-::: {.fragment .fade-in fragment-index=8}
+::: {.fragment .fade-in fragment-index=7}
 - [Shared file system between compute nodes]{.blue}
 :::
 
-::: {.fragment .fade-in fragment-index=9}
+::: {.fragment .fade-in fragment-index=8}
 - [Allocation determines access]{.blue}
 :::
 
-::: {.fragment .fade-in fragment-index=10}
-- NOAA resource so [no restrictions]{.fragment .hl-blue fragment-index=11} on acceptable use/analyzing protected data if working on mission related tasks
+::: {.fragment .fade-in fragment-index=9}
+- NOAA resource so [no restrictions]{.fragment .hl-blue fragment-index=10} on acceptable use/analyzing protected data if working on mission related tasks
 :::
 :::
 
 :::
 :::
 
-::: {.fragment .fade-in fragment-index=12}
+::: {.fragment .fade-in fragment-index=11}
 ::: {.absolute left="10%" right="25%" bottom="27.5%" top="55%" style="font-size:1em; padding: 0.5em 1em; background-color: rgba(255, 255, 255, 1); backdrop-filter: blur(5px); box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .5); border-radius: 5px;"}
 Both use software containers 
 :::
 :::
 
-::: {.fragment .fade-in fragment-index=12}
+::: {.fragment .fade-in fragment-index=11}
 ![](static/apptainer-logo.png){.absolute bottom="27.5%" right="30%" width="10%" style="max-height: unset; max-width: unset;"}
 :::
 
@@ -291,8 +291,8 @@ Both use software containers
 :::
 :::
 
-::: {.fragment .fade-out fragment-index=8}
-::: {.fragment .fade-in fragment-index=6}
+::: {.fragment .fade-out fragment-index=7}
+::: {.fragment .fade-in fragment-index=5}
 ![](static/slurm-logo.png){.absolute top="35%" left="60%" width="15%" style="max-height: unset; max-width: unset;"}
 :::
 :::
@@ -302,7 +302,7 @@ Both use software containers
 <br/>
 
 ::: {.fragment .semi-fade-out fragment-index=3}
-Many may already be using containers such as [GitHub Codespaces]{.fragment .hl-cur-black fragment-index=1} or [Posit Workbench]{.fragment .hl-cur-pc-orange fragment-index=2} in existing cloud-based workflows
+Many may already be using containers in existing cloud-based workspaces such as [GitHub Codespaces]{.fragment .hl-cur-black fragment-index=1} or [Posit Workbench]{.fragment .hl-cur-pc-orange fragment-index=2}
 :::
 
 ::: {.fragment .fade-out fragment-index=2}
@@ -451,7 +451,7 @@ apptainer build linux-r4ss-v4.sif linux-r4ss-v4.def
 ## Let's walk through an example {.smaller}
 
 ::: {.fragment .fade-in fragment-index=1}
-In this case we will use [NOAA Hera](https://docs.rdhpcs.noaa.gov/systems/hera_user_guide.html){preview-link="true"} to conduct a quick retrospective analysis on all models in the [Stock Synthesis](https://github.com/nmfs-ost/ss3-source-code) (SS3) [testing suite](https://github.com/nmfs-ost/ss3-test-models).
+In this case we will use [NOAA Hera](https://docs.rdhpcs.noaa.gov/systems/hera_user_guide.html){preview-link="true"} to conduct a quick retrospective analysis of all models in the [Stock Synthesis](https://github.com/nmfs-ost/ss3-source-code) (SS3) [testing suite](https://github.com/nmfs-ost/ss3-test-models).
 :::
 
 ::: {.fragment .fade-in fragment-index=1}
@@ -549,7 +549,7 @@ style Hera stroke-width:3px,stroke-dasharray: 5 5
 ::: {.absolute left="40%" right="0%" top="55%" style="font-size:0.65em;"}
 ::: {.callout-important }
 
-Note that you will need to replace [User.Name]{.blue} with your actual user name and [project_name]{.blue} with your specific project name in the following code.
+Note that you will need to replace [User.Name]{.blue} with your actual NOAA RDHPCS user name and [project_name]{.blue} with your specific Hera project name in the following code.
 
 :::
 :::
